force-app/main/default/objects/Account/fields/beat__c.field-meta.xml
<CustomField>
    <fullName>beat__c</fullName>
    <label>beat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>