force-app/main/default/objects/Account/fields/ERTGER__c.field-meta.xml
<CustomField>
    <fullName>ERTGER__c</fullName>
    <label>ERTGER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>