force-app/main/default/objects/Account/fields/ghvvhjhv__c.field-meta.xml
<CustomField>
    <fullName>ghvvhjhv__c</fullName>
    <label>ghvvhjhv</label>
    <type>Email</type>
</CustomField>