force-app/main/default/objects/Account/fields/sdfd__c.field-meta.xml
<CustomField>
    <fullName>sdfd__c</fullName>
    <label>sdfd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>